assets/css/style.css
/* ! GENERAL STYLING RULES */
/* Add wood background */
body {
  background-image: url("../images/retina_wood.png");
  color: #532901;
}

/* ! LANDING PAGE STYLING */
/* Title and lead text styles */
.title-container img {
  margin-top: 2%;
  width: 10%;
}

.title-container h1 {
  padding-top: 2%;
  font-size: 2rem;
}

.title-container p {
  padding-top: 1%;
  padding-bottom: 1%;
}

/* Input styling for index page */
input.player-name {
  width: 30%;
  height: 5vh;
  text-align: center;
  border-radius: 20px;
  border: solid 2px #532901;
  background-color: #ffffff93;
}

i.fas {
  font-size: 4rem;
  padding-top: 5%;
  color: #532901;
  cursor: pointer; 
}

/* ! RULES PAGE STYLING */
/* Tom Nook character image styles */
.tom-nook {
  padding-top: 5%;
}

.tom-nook img {
  width: 15vh;
}

span.playerName {
  font-weight: bolder;
  color: rgb(1, 99, 1);
  font-size: 1.5rem;
}

/* Rules & messages text box styles */
.rules-display,
.message-display {
  margin-top: 5%;
}

.rules-section,
.message-section {
  background-color: #d18e5070;
  border-radius: 10px;
}

.rules-section p,
.message-section p {
  padding-top: 4vh;
  padding-bottom: 4vh;
}

.small-print {
font-size: 0.8rem;
padding-top: 10px;;
}

/* ! GAME PAGE STYLING */

.timer {
  padding: 10px;
}

.moves {
  padding-top: 10px;
}

.card {
  width: 150px;
  height: 150px;
  background: none;
  border: none;
  margin-bottom: 10px;
  display: -webkit-flex;
  display: flex;
  -webkit-align-items: center;
  align-items: center;
}

.selected-card {
   filter: contrast(150%);
   visibility: hidden;
}

.match {
  filter: brightness(10%);
}

.card-front {
  width: 150px;
  height: 150px;
}

.card-back {
  position: absolute;
  width: inherit;
}

.cancel-game {
  padding-left: 20px;
}

/* ! Custom media queries for mobile devices */
@media (max-width: 768px) {
  .title-container img {
    width: 30%;
  }

  .title-container p {
    font-size: 1rem;
    padding-top: 10%;
    padding-bottom: 10%
  }

  input.player-name {
    width: 80%;
    height: 5vh;
  }

  .next-rule {
    padding-top: 5%;
  }

  .tom-nook img {
    width: 30%;
  }
  
 .rules-section p {
   margin: 5%
 }

 .card {
  width: 100px;
  height: 100px;
  background: none;
  border: none;
  margin: 10px;
 }

.card-front {
  width: 100px;
  height: 100px;
}

.card-back {
  position: absolute;
  width: inherit;
}
.game-container {
  padding-left: 7%;
}
}

